# segundo_proyecto

./: .env.example  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
SRC/api/: main.py
SRC/api/core/: logging.py  security.py  settings.py
SRC/api/ml/: features.py  model_loader.py  predict.py  train.py
SRC/api/models/: accident.py  base.py  user.py
SRC/api/repositories/: accident_repository.py  user_repository.py
SRC/api/schemas/: accident_schema.py  user_schema.py
SRC/api/services/: accident_service.py  prediction_service.py  user_service.py
SRC/api/workers/: celery_app.py  tasks.py
